jgit (3.7.0-1) UNRELEASED; urgency=medium

  * New upstream release (Closes: #774050).
  * Bump Standards-Version to 3.9.6 (no changes).
  * Remove Niels Thykier from Uploaders; thanks for your contributions.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Sun, 26 Apr 2015 21:23:34 +0200

jgit (3.4.0-2) unstable; urgency=medium

  * Fix FTBFS with args4j 2.0.30 (Closes: #761537).

 -- Jakub Adam <jakub.adam@ktknet.cz>  Fri, 19 Sep 2014 20:29:28 +0200

jgit (3.4.0-1) unstable; urgency=medium

  * New Upstream release.
  * Refreshed debian-custom-build.patch and ftbfs-args4j-2.0.25-fix.patch.
  * Removed d/patches/java8-compatibility.patch (applied upstream).
  * Disable jacoco-maven-plugin
    - no need for code coverage during build.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Sat, 21 Jun 2014 14:16:30 +0200

jgit (3.3.2-1) unstable; urgency=medium

  * Team upload.

  [ Emmanuel Bourg ]
  * New Upstream release.
    - Refreshed the patches
  * Fixed a test failure with Java 8

  [ tony mancill ]
  * Update gbp.conf for bz2 upstream tarball.

 -- Emmanuel Bourg <ebourg@apache.org>  Tue, 13 May 2014 10:36:22 +0200

jgit (3.3.1-1) unstable; urgency=medium

  * New Upstream release.
  * Fix test failure in org.eclipse.jgit.pgm.ArchiveTest. Added libxz-java
    into Build-Depends and into org.eclipse.jgit.pgm.test/pom.xml since
    the dependency has been made optional in libcommons-compress-java.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Wed, 26 Mar 2014 19:11:23 +0100

jgit (3.3.0-1) unstable; urgency=medium

  * New Upstream release.
  * Removed d/patches/javaewah-compatibility.patch (applied upstream).
  * Added doc-base control file into libjgit-java-doc.
  * Remove version from com.googlecode.javaewah Orbit dependency.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Thu, 06 Mar 2014 17:29:30 +0100

jgit (3.2.0-1) unstable; urgency=medium

  * New Upstream release.
  * Refreshed d/patches/ftbfs-args4j-2.0.25-fix.patch.
