@@ -7,10 +7,10 @@ Subject: unversioned-orbit-dependencies
  1 file changed, 1 insertion(+), 1 deletion(-)
 
 diff --git a/org.eclipse.jgit/META-INF/MANIFEST.MF b/org.eclipse.jgit/META-INF/MANIFEST.MF
-index 1dae2db..82c684e 100644
+index f75a7b9..eadeb62 100644
 --- a/org.eclipse.jgit/META-INF/MANIFEST.MF
 +++ b/org.eclipse.jgit/META-INF/MANIFEST.MF
-@@ -125,7 +125,7 @@ Export-Package: org.eclipse.jgit.api;version="3.3.0";
+@@ -144,7 +144,7 @@ Export-Package: org.eclipse.jgit.api;version="3.7.0";
  Bundle-ActivationPolicy: lazy
  Bundle-RequiredExecutionEnvironment: J2SE-1.5
  Require-Bundle: com.jcraft.jsch;bundle-version="[0.1.37,0.2.0)"
@@ -18,4 +18,4 @@ index 1dae2db..82c684e 100644
 +Import-Package: com.googlecode.javaewah,
   javax.crypto,
   javax.net.ssl,
-  org.xml.sax,
+  org.slf4j;version="[1.7.0,2.0.0)",
